@@ -283,6 +283,21 @@ static void get_col(GdkColor *dst, const GdkColor *src, enum CongDispspecGCUsage
 }
 #endif /* #if NEW_LOOK */
 
+GdkGC*
+generate_gc_for_col (const GdkColor *col)
+{
+	GdkGC *gc;
+
+	g_return_val_if_fail (col, NULL);
+
+	gc = gdk_gc_new(cong_gui_get_a_window()->window);
+	gdk_gc_copy(gc, cong_gui_get_a_window()->style->white_gc);
+	gdk_colormap_alloc_color(cong_gui_get_a_window()->style->colormap, col, FALSE, TRUE);
+	gdk_gc_set_foreground(gc, col);	
+
+	return gc;
+}
+
 static void cong_dispspec_element_init_col(CongDispspecElement* element, unsigned int col)
 {
 	g_assert(element);
@@ -296,7 +311,6 @@ static void cong_dispspec_element_init_col(CongDispspecElement* element, unsigne
 
 		for (i=0; i<CONG_DISPSPEC_GC_USAGE_NUM; i++) {
 			GdkColor this_col;
-			GdkGC *gc = gdk_gc_new(cong_gui_get_a_window()->window);
 
 #if 1
 			get_col(&this_col, &gdk_col, i);
@@ -327,10 +341,7 @@ static void cong_dispspec_element_init_col(CongDispspecElement* element, unsigne
 #endif
 
 			element->col_array[i] = this_col;
-			element->gc_array[i] = gc;
-			gdk_gc_copy(gc, cong_gui_get_a_window()->style->white_gc);
-			gdk_colormap_alloc_color(cong_gui_get_a_window()->style->colormap, &this_col, FALSE, TRUE);
-			gdk_gc_set_foreground(gc, &this_col);
+			element->gc_array[i] = generate_gc_for_col (&this_col);
 		}
 	}
 #else
