@@ -1,5 +1,9 @@
 2003-09-24  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-dispspec.c
+
+	Moved hackish GdkGC allocation into a separate routine
+	
 	* cong-editor-area-structural.h, cong-editor-area-structural.c, Makefile.am
 
 	New files refactoring most of cong-editor-area-structural-tag into a new parent class, now shared with entity code 
